tests/compile-fail/integration__integration__ecl_features__eosd_exported_fn_bad_siggy_string.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: non-const string variable
  ┌─ <input>:8:11
  │
8 │ void bad1(string arg) {}
  │           ^^^^^^ only possible for const vars


